--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <!-- Marker 1 -->
       <a-marker id="marker" type="pattern" url="marker\pattern-A_Marker.patt">
-        <a-gltf-model class="model" src="#edgar_degas" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" material="side: double;" cursor-listener></a-gltf-model>
+        <a-gltf-model class="model" src="#edgar_degas" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="edgar_degas" material="side: double;" cursor-listener></a-gltf-model>
         <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -73,7 +73,7 @@
 
             <!-- Marker 2-->
       <a-marker id="marker1" type="pattern" url="marker\pattern-B_Marker.patt">
-        <a-gltf-model class="model" src="#banksy" scale="1 1 1" rotation="0 0 0" position="0 0.2 0" material="side: double;" cursor-listener></a-gltf-model>
+        <a-gltf-model class="model" src="#banksy" scale="1 1 1" rotation="0 0 0" position="0 0.2 0" id="banksy" material="side: double;" cursor-listener></a-gltf-model>
         <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -96,7 +96,7 @@
 
             <!-- Marker 1 -->
             <a-marker id="marker2" type="pattern" url="marker\pattern-C_Marker.patt">
-              <a-gltf-model class="model" src="#van_gogh" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" material="side: double;" cursor-listener></a-gltf-model>
+              <a-gltf-model class="model" src="#van_gogh" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="van_gogh" material="side: double;" cursor-listener></a-gltf-model>
               <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -144,7 +144,7 @@
 
             <!-- Marker 1 -->
             <a-marker id="marker4" type="pattern" url="marker\pattern-E_Marker.patt">
-              <a-gltf-model class="model" src="#water_lilies" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="water_lilies" material="side: double;" cursor-listener></a-gltf-model>
+              <a-gltf-model class="model" src="#water_lilies" scale="0.1 0.1 0.1" rotation="-90 0 0" position="0 0.2 0" id="lilies" material="side: double;" cursor-listener></a-gltf-model>
               <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -168,7 +168,7 @@
 
                   <!-- Marker 1 -->
       <a-marker id="marker5" type="pattern" url="marker\pattern-F_Marker.patt">
-        <a-gltf-model class="model" src="#franz_marc" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="image" material="side: double;" cursor-listener></a-gltf-model>
+        <a-gltf-model class="model" src="#franz_marc" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="franz_marc" material="side: double;" cursor-listener></a-gltf-model>
         <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -196,7 +196,7 @@
           animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
           fuse="true"
           fuse-timeout="1500"
-          material="color: yellow; shader: flat"
+          material="color: black; shader: flat"
           position="0 0 -2"
           geometry="primitive: ring">
         </a-cursor>
@@ -285,13 +285,31 @@
           if(obj.tagName === 'A-GLTF-MODEL'){
             var oldModelRotation = obj.getAttribute('rotation');
             var oldModelSrc = obj.getAttribute('src');
+
+            var id = obj.getAttribute('id');
             obj.parentNode.removeChild(obj);
-            var newModel = document.createElement('a-gltf-model');
+            if(id === 'mona'){
+              var newModel = document.createElement('a-gltf-model');
+            newModel.setAttribute('src', oldModelSrc);
+            newModel.setAttribute('position', '0 0.2 0');
+            newModel.setAttribute('scale', '2 2 2');
+            newModel.setAttribute( 'rotation', oldModelRotation );
+            marker.appendChild(newModel);
+            }else if(id === 'lilies'){
+              var newModel = document.createElement('a-gltf-model');
+            newModel.setAttribute('src', oldModelSrc);
+            newModel.setAttribute('position', '0 0.2 0');
+            newModel.setAttribute('scale', '0.1 0.1 0.1');
+            newModel.setAttribute( 'rotation', oldModelRotation );
+            marker.appendChild(newModel);
+            }else{
+              var newModel = document.createElement('a-gltf-model');
             newModel.setAttribute('src', oldModelSrc);
             newModel.setAttribute('position', '0 0.2 0');
             newModel.setAttribute('scale', '1 1 1');
-            newModel.setAttribute( 'rotation', oldModelRotation )
+            newModel.setAttribute( 'rotation', oldModelRotation );
             marker.appendChild(newModel);
+            }
           }
         });
       }
@@ -321,13 +339,31 @@
           if(obj.tagName === 'A-GLTF-MODEL'){
             var oldModelRotation = obj.getAttribute('rotation');
             var oldModelSrc = obj.getAttribute('src');
+
+            var id = obj.getAttribute('id');
             obj.parentNode.removeChild(obj);
-            var newModel = document.createElement('a-gltf-model');
+            if(id === 'mona'){
+              var newModel = document.createElement('a-gltf-model');
+            newModel.setAttribute('src', oldModelSrc);
+            newModel.setAttribute('position', '0 0.2 0');
+            newModel.setAttribute('scale', '2 2 2');
+            newModel.setAttribute( 'rotation', oldModelRotation );
+            marker.appendChild(newModel);
+            }else if(id === 'lilies'){
+              var newModel = document.createElement('a-gltf-model');
+            newModel.setAttribute('src', oldModelSrc);
+            newModel.setAttribute('position', '0 0.2 0');
+            newModel.setAttribute('scale', '0.1 0.1 0.1');
+            newModel.setAttribute( 'rotation', oldModelRotation );
+            marker.appendChild(newModel);
+            }else{
+              var newModel = document.createElement('a-gltf-model');
             newModel.setAttribute('src', oldModelSrc);
             newModel.setAttribute('position', '0 0.2 0');
             newModel.setAttribute('scale', '1 1 1');
-            newModel.setAttribute( 'rotation', oldModelRotation )
+            newModel.setAttribute( 'rotation', oldModelRotation );
             marker.appendChild(newModel);
+            }
           }
         });
       }
@@ -350,8 +386,19 @@ AFRAME.registerComponent('cursor-listener', {
         marker.querySelectorAll('.false-answer, .right-answer, .plane, .question .answer, .model').forEach(function(obj) {
           // Überprüfe, ob es sich um eine Box handelt
           if(obj.tagName === 'A-GLTF-MODEL'){
+            var id = obj.getAttribute('id');
+
+            if(id === 'mona'){
             obj.setAttribute('position', '0 0.2 -0.6');
+            obj.setAttribute('scale', '1 1 1');
+            }else if(id === 'lilies'){
+              obj.setAttribute('position', '0 0.2 -0.6');
+            obj.setAttribute('scale', '0.05 0.05 0.05');
+            }else{
+              obj.setAttribute('position', '0 0.2 -0.6');
             obj.setAttribute('scale', '0.5 0.5 0.5');
+            }
+
           }
           if (obj.tagName === 'A-BOX') {
             // Setze die Größe der Box
