--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        <!-- Marker start -->
        <a-marker id="marker-start" type="pattern" url="marker\pattern-start.patt">
         <!-- Platzhalter für die Spielanleitung -->
-        <a-text class="instruction" value="Willkommen zum WebAR-Museumsquiz! Suche mit deiner Handy-Kamera einen Marker. Wenn der Marker komplett im Sichtfeld der Kamera ist, erscheint ein Objekt." color="#808080" height="4" width="1.8" rotation="-90 0 0" scale="2 2 2" position="-1.8 0 0"></a-text>
+        <a-text class="instruction" value="Willkommen zum WebAR-Museumsquiz! Suche mit deiner Handy-Kamera einen Marker. Wenn der Marker komplett im Sichtfeld der Kamera ist, erscheint ein Objekt." color="red" height="4" width="1.8" rotation="-90 0 0" scale="2 2 2" position="-1.8 0 0"></a-text>
         <a-box class="next-instruction" scale="0.1 0.1 0.1" width="4" height="4" depth="4" color="blue" position="0.5 0 0.7" next material="opacity: 0.5">
           <a-text value="Next" rotation="-90 0 0" scale="4 4 4" position="-2.2 0 0" width="10" height="10" color="black" font-weight="bold"></a-text>
         </a-box>
@@ -64,7 +64,7 @@
           <a-text class="answer" value="über 200" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
         <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-          <a-text class="question" value="Edgar Degas erschuf viele Bilder zum Thema Ballett. Schätze wie viele" position="100 0 0" scale="1.2 1.5 1.5" color="#808080"></a-text>
+          <a-text class="question" value="Edgar Degas erschuf viele Bilder zum Thema Ballett. Schätze wie viele" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
 
@@ -87,7 +87,7 @@
           <a-text class="answer" value="Richard J. Hunter" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
         <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-          <a-text class="question" value="Wie heißt der Streetart-Künstler Banksy mit bürgerlichem Namen?" position="100 0 0" scale="1.2 1.5 1.5" color="#808080" ></a-text>
+          <a-text class="question" value="Wie heißt der Streetart-Künstler Banksy mit bürgerlichem Namen?" position="100 0 0" scale="1.1 1.5 1.5" color="red" ></a-text>
         </a-plane>
       </a-marker>
 
@@ -110,7 +110,7 @@
                 <a-text class="answer" value="Gustav Klimt" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
               </a-box>
               <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-                <a-text class="question" value="Von welchem berühmten Maler stammt die Sternennacht" position="100 0 0" scale="1.2 1.5 1.5" color="#808080"></a-text>
+                <a-text class="question" value="Von welchem berühmten Maler stammt die Sternennacht" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
               </a-plane>
             </a-marker>
 
@@ -134,7 +134,7 @@
           <a-text class="answer" value="British Museum" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
         <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-          <a-text class="question" value="Wo wird die Mona Lisa von Leonardo da Vinci ausgestellt?" position="100 0 0" scale="1.2 1.5 1.5" color="#808080"></a-text>
+          <a-text class="question" value="Wo wird die Mona Lisa von Leonardo da Vinci ausgestellt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
 
@@ -158,7 +158,7 @@
                 <a-text class="answer" value="Picasso" rotation="-90 0 0" scale="4 4 4" position="-2.2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
               </a-box>
               <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-                <a-text class="question" value="Welcher Maler war berühmt für seine Wasserlilien?" position="100 0 0" scale="1.2 1.5 1.5" color="#808080"></a-text>
+                <a-text class="question" value="Welcher Maler war berühmt für seine Wasserlilien?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
               </a-plane>
             </a-marker>
 
@@ -182,7 +182,7 @@
           <a-text class="answer" value="Grüner Hase" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
         <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-          <a-text class="question" value="Franz Marc malte oft Tiere. Für welches Tier war er besonders bekannt?" position="100 0 0" scale="1.2 1.5 1.5" color="#808080"></a-text>
+          <a-text class="question" value="Franz Marc malte oft Tiere. Für welches Tier war er besonders bekannt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
 
