--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="yellow" position="0.4 0.5 0.9" material="opacity: 0.5" right-answer>
           <a-text class="answer" value="über 200" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
-        <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
+        <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
           <a-text class="question" value="Edgar Degas erschuf viele Bilder zum Thema Ballett. Schätze wie viele" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
@@ -86,7 +86,7 @@
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="yellow" position="0.4 0.5 0.9" material="opacity: 0.5" false-answer>
           <a-text class="answer" value="Richard J. Hunter" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
-        <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
+        <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
           <a-text class="question" value="Wie heißt der Streetart-Künstler Banksy mit bürgerlichem Namen?" position="100 0 0" scale="1.1 1.5 1.5" color="red" ></a-text>
         </a-plane>
       </a-marker>
@@ -94,7 +94,7 @@
             <!-- Marker 1 -->
             <a-marker id="marker2" type="pattern" url="marker\pattern-C_Marker.patt">
               <a-gltf-model class="model" src="#van_gogh" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="van_gogh" material="side: double;" cursor-listener></a-gltf-model>
-              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
+
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
               <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -109,8 +109,8 @@
               <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="yellow" position="0.4 0.5 0.9" material="opacity: 0.5" false-answer>
                 <a-text class="answer" value="Gustav Klimt" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
               </a-box>
-              <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-                <a-text class="question" value="Von welchem berühmten Maler stammt die Sternennacht" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
+              <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
+                <a-text class="question" value="Von welchem berühmten Maler stammt die Sternennacht? " position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
               </a-plane>
             </a-marker>
 
@@ -133,7 +133,7 @@
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="yellow" position="0.4 0.5 0.9" material="opacity: 0.5" false-answer>
           <a-text class="answer" value="British Museum" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
-        <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
+        <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
           <a-text class="question" value="Wo wird die Mona Lisa von Leonardo da Vinci ausgestellt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
@@ -181,7 +181,7 @@
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="yellow" position="0.4 0.5 0.9" material="opacity: 0.5" false-answer>
           <a-text class="answer" value="Grüner Hase" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
-        <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
+        <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
           <a-text class="question" value="Franz Marc malte oft Tiere. Für welches Tier war er besonders bekannt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
